# han-riscv

./: .gitignore  CMakeLists.txt  README.md
docs/: 00_project_vision.md  01_language_plan.md  02_compiler_pipeline.md  03_riscv_backend.md  04_chinese_ir_and_asm.md  05_bootstrap_plan.md  06_next_steps.md  07_first_compiler.md
examples/: factorial.han  hello.han
runtime/: README.md
src/: README.md  hancc.cpp
tests/: README.md
